2011-01-23  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* configure.ac: Compile with NDEBUG and -O3 by default.

	* src/dmcsd.cpp: Show compile-time options.
	* src/dmcsc.cpp: Likewise.

	* include/network/AsynClient.h: Add callback.
	* include/network/AsynClient.tcc: Likewise.

2011-01-22  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/solver/RelSatSolver.cpp: In leaf case, send NULL model after
	receiving UNSAT.

	* src/network/OutputThread.cpp: Fix bug: always HEADER_ANS.

	* src/network/JoinThread.cpp: End of join is a NULL model.

	* src/dmcsc.cpp: Get the number of answers.

	* include/network/AsynClient.tcc: Send a message after request
	next model. We can later change this to just sending HEADER_NEXT.

	* include/network/AsynClient.h: Announce number of answers.

	* include/dmcs/StreamingBackwardMessage.h: More meaningful debug infor.

	* log4cxx.cfg: Enable TRACE.

	* include/network/Makefile.am: Now use AsynClient.
	* src/dmcsc.cpp: Likewise.

	* include/network/BaseClient.h: Better safe than sorry.

	* include/network/AsynClient.h: Turn into end-user's client.
	* include/network/AsynClient.tcc: Likewise.

	* include/network/RelSatSolverThread.h: Fix potential underscore
	bug.
	* include/network/ThreadFactory.h: Likewise.
	* src/dmcs/StreamingDMCS.cpp: Likewise.
	* src/network/RelSatSolverThread.cpp: Likewise.
	* src/network/ThreadFactory.cpp: Likewise.

	* include/network/ConcurrentMessageQueueHelper.h: Comment out some
	debugging information.
	* include/network/NeighborThread.h: Likewise.
	* src/network/StreamingDMCSThread.cpp: Likewise.

	* include/network/AsynClient.h: Use MessagingGatewayBCPtr.
	* include/network/AsynClient.tcc: Likewise.
	* include/network/NeighborInputThread.h: Likewise.
	* src/network/NeighborInputThread.cpp: Likewise.

	* include/mcs/BeliefState.h: Use pointer instead of Ptr.

	* include/dmcs/OutputNotification.h: Clean up.
	* include/dmcs/StreamingDMCSNotification.h: Likewise.
